# Blocks

./: .clang-format  .gitignore  CMakeLists.txt
app/linux/: CMakeLists.txt  main.cpp
inc/: CMakeLists.txt
inc/bl/: canvas.hpp  color.hpp  display.hpp  game.hpp  renderer.hpp  scene.hpp
inc/bl/ecs/: all.hpp  system.hpp
inc/bl/ecs/components/: box.hpp  color.hpp  drawable.hpp  position.hpp  renderable.hpp
inc/bl/ecs/systems/: renderer.hpp
inc/bl/scns/: all.hpp  null.hpp
inc/blocks/: game.hpp  scene.hpp  time.hpp
inc/blocks/ecs/: all.hpp
inc/blocks/ecs/components/: box.hpp  color.hpp  position.hpp  renderable.hpp
inc/blocks/scenes/: all.hpp  main.hpp  null.hpp
lib/: CMakeLists.txt
lib/bl/entt/: entt.hpp  fwd.hpp
src/: CMakeLists.txt
src/bl/: canvas.cpp  color.hpp  colors.hpp  display.cpp  display.hpp  game.cpp  game.hpp  macros.hpp  main.cpp  main.hpp  scene.cpp  scene.hpp  time.cpp  time.hpp  types.hpp
src/bl/ecs/: all.hpp  cell.hpp  grid.hpp  playfield.cpp  playfield.hpp  position.hpp  system.cpp  system.hpp
src/bl/ecs/cmp/: block.hpp  board.hpp  children.hpp  gameboard.hpp  grid.hpp  piece.hpp  playfield.hpp  position.hpp  renderable.hpp  square.hpp
src/bl/ecs/cmp/main/: board.hpp
src/bl/ecs/components/: color.hpp  filled.hpp  hollow.hpp
src/bl/ecs/ent/: block.cpp  block.hpp  board.cpp  board.hpp  debris.cpp  debris.hpp  playfield.cpp  playfield.hpp
src/bl/ecs/logic/: playground.cpp  playground.hpp  position.hpp
src/bl/ecs/render/: rectangle.hpp  renderable.hpp  renderer.cpp  renderer.hpp
src/bl/ecs/sys/: printer.cpp  printer.hpp  renderer.cpp  renderer.hpp
src/bl/ecs/systems/: renderer.cpp  renderer.hpp
src/bl/scns/: main.cpp  main.hpp  null.cpp
src/blocks/: display.cpp  display.hpp  game.cpp  game.hpp  main.cpp  main.hpp  raylib.hpp  renderer.hpp  scene.cpp  time.cpp
src/blocks/scenes/: main.cpp  null.cpp
tst/: CMakeLists.txt
tst/unit/: CMakeLists.txt
